# spotify-to-ytmusic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: briefcase.yml  main.yml  release.yml
spotify2ytmusic/: __main__.py  backend.py  cli.py  gui.py  spotify_backup.py
